# platform.upstream.csr-framework

./: CMakeLists.txt  LICENSE  Makefile  README  csr-framework.changes  csr-framework.pc.in  project.config
engine/web-protection/: CMakeLists.txt  sample-engine.cpp
engine/web-protection/resources/: csret_wp_risky_urls
framework/: CMakeLists.txt  CsrLog.h  Makefile  TCSErrorCodes.h  TCSImpl.c  TCSImpl.h  TWPImpl.c  TWPImpl.h
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/client/: TCSImpl.c  TWPImpl.c  api.cpp  async-logic.cpp  async-logic.h  callback.h  canonicalize.cpp  canonicalize.h  client-common.cpp  client-common.h  content-screening.cpp  engine-manager.cpp  error.cpp  eventfd.cpp  eventfd.h  handle-ext.cpp  handle-ext.h  handle.cpp  handle.h  utils.cpp  utils.h  web-protection.cpp
src/framework/common/: async-protocol.h  binary-queue.cpp  binary-queue.h  command-id.h  connection.cpp  connection.h  credential-cynara.cpp  credential-smack.cpp  credential.cpp  credential.h  cs-context.cpp  cs-context.h  cs-detected.cpp  cs-detected.h  cs-types.cpp  cs-types.h  dispatcher.cpp  dispatcher.h  em-context.cpp  em-context.h  em-result.cpp  em-result.h  exception.cpp  exception.h  icontext.cpp  icontext.h  iresult.h  kvp-container.cpp  kvp-container.h  macros.h  mainloop.cpp  mainloop.h  message-buffer.cpp  message-buffer.h  raw-buffer.h  serialization.h  service.cpp  service.h  socket-descriptor.cpp  socket-descriptor.h  (+10 more)
src/framework/common/audit/: console-sink.cpp  console-sink.h  dlog-sink.cpp  dlog-sink.h  log-sink.h  logger.cpp  logger.h
src/framework/database/: column.cpp  column.h  connection.cpp  connection.h  csr_db.cpp  csr_db.h  statement.cpp  statement.h
src/framework/db/: cache.cpp  cache.h  connection.cpp  connection.h  manager.cpp  manager.h  query.h  row.h  statement.cpp  statement.h
src/framework/main/: csr-main.cpp  mainloop.cpp  mainloop.h
src/framework/service/: access-control-cynara.cpp  access-control-smack.cpp  access-control.cpp  access-control.h  app-deleter.cpp  app-deleter.h  core-usage.cpp  core-usage.h  cs-loader.cpp  cs-loader.h  cs-logic.cpp  cs-logic.h  dir-blacklist.cpp  dir-blacklist.h  em-logic.cpp  em-logic.h  engine-error-converter.cpp  engine-error-converter.h  exception.cpp  exception.h  file-system.cpp  file-system.h  fs-utils.cpp  fs-utils.h  iloader.cpp  iloader.h  logic.cpp  logic.h  server-service.cpp  server-service.h  service.cpp  service.h  thread-pool.cpp  thread-pool.h  type-converter.cpp  type-converter.h  wp-loader.cpp  wp-loader.h  wp-logic.cpp  wp-logic.h
src/framework/ui/: CMakeLists.txt  askuser.cpp  askuser.h  common.cpp  common.h
src/framework/ui/popup/: CMakeLists.txt  logic.cpp  logic.h  main.cpp  package-info.cpp  package-info.h  popup-cs-notify-app.cpp  popup-cs-notify-app.h  popup-cs-notify-data.cpp  popup-cs-notify-data.h  popup-cs-notify-file.cpp  popup-cs-notify-file.h  popup-cs-prompt-app.cpp  popup-cs-prompt-app.h  popup-cs-prompt-data.cpp  popup-cs-prompt-data.h  popup-cs-prompt-file.cpp  popup-cs-prompt-file.h  popup-service.cpp  popup-service.h  popup-string.h  popup-webview.cpp  popup-webview.h  popup-wp-notify.cpp  popup-wp-notify.h  popup-wp-prompt.cpp  popup-wp-prompt.h  popup.cpp  popup.h
src/framework/ui/res/: CMakeLists.txt
src/framework/ui/res/po/: CMakeLists.txt  as.po  az.po  be_BY.po  bn.po  bn_BD.po  en.po  en_US.po  gu.po  hi.po  hy.po  id.po  jv.po  ka.po  kk.po  kn.po  ko_KR.po  ky_KG.po  ml.po  mn_MN.po  mr.po  ms.po  ne.po  or.po  pa.po  (+13 more)
src/include/: CMakeLists.txt
src/include/csr/: TCSErrorCodes.h  TWPImpl.h  api.h  content-screening-types.h  content-screening.h  csr-content-screening-types.h  csr-content-screening.h  csr-engine-manager.h  csr-error.h  csr-web-protection-types.h  csr-web-protection.h  engine-manager.h  error.h  web-protection-types.h  web-protection.h
src/include/csre/: content-screening-engine-info.h  content-screening-types.h  content-screening.h  csre-content-screening-engine-info.h  csre-content-screening-types.h  csre-content-screening.h  csre-error.h  csre-web-protection-engine-info.h  csre-web-protection-types.h  csre-web-protection.h  error.h  web-protection-engine-info.h  web-protection-types.h  web-protection.h
systemd/: CMakeLists.txt  csr-admin.socket.in  csr-cs.socket.in  csr-popup.service.in  csr-popup.socket.in  csr-wp.socket.in  csr.service.in  csr.socket.in
test/: CMakeLists.txt  Makefile  SampleInfo.c  SampleInfo.h  TCSTest.c  TCSTest.h  TCSTestUtils.c  TWPTest.c  TWPTest.h  TWPTestUtils.c  UrlInfo.h  WPMakefile  XMHttp.c  XMHttp.h  XMPHttp.c  XMPHttp.h  colour_log_formatter.cpp  colour_log_formatter.h  test-api-content-screening-async.cpp  test-api-content-screening.cpp  test-api-engine-content-screening.cpp  test-api-engine-manager.cpp  test-api-engine-web-protection.cpp  test-api-web-protection.cpp  test-api.cpp  test-common.cpp  test-common.h  test-cs-loader.cpp  test-helper.cpp  test-helper.h  test-internal-cpucore.cpp  test-internal-database.cpp  test-internal-file-system.cpp  test-main.cpp  test-resource.cpp  test-resource.h  test-wp-loader.cpp
test/engine/: CMakeLists.txt
test/engine/content-screening/: CMakeLists.txt  sample-engine.cpp
test/engine/content-screening/resources/: csret_cs_virus_signatures
test/engine/web-protection/: CMakeLists.txt  sample-engine.cpp
test/engine/web-protection/resources/: csret_wp_risky_urls
test/internals/: CMakeLists.txt  test-api-engine-content-screening.cpp  test-api-engine-web-protection.cpp  test-canonicalize.cpp  test-cpucore.cpp  test-cs-loader.cpp  test-db.cpp  test-file-system.cpp  test-main.cpp  test-package-info.cpp  test-wp-loader.cpp
test/pkgs/emulator/: MaliciousTpk.tpk  MaliciousWgt.wgt  non-malware.wgt
test/popup/: CMakeLists.txt  test-main.cpp  test-popup.cpp
test/resources/: maliciousapp.tpk  test_generic_file  test_normal_file  test_risky_file  testwritefile.txt
test/resources/emulator/: MaliciousTpk.tpk
test/resources/test_app/data/: test_malware_file
test/thread-pool/: CMakeLists.txt  test-main.cpp  test-thread-pool.cpp
(+24 files in other folders)
